# ml-georeferencer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_SETUP.md  LICENSE  MEMO.md  README.md  commit_message.txt  justfile  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/src/: App.js  App.tsx  Canvas.js  Canvas.tsx  logger.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: core.json  dialog.json  fs.json  global-shortcut.json  http.json  migrated.json  notification.json  os.json  process.json  shell.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/features/: Cargo.toml
crates/io/: Cargo.toml
crates/io/src/: lib.rs
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs
crates/solver/tests/: pairs_test.rs  solver_test.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
data/sample/: project.json  reference.tiff
docs/: ARCHITECTURE.md  BOOTSTRAP_WITH_CLI.md  ROADMAP.md  SPEC.md  api.md  oomap-spec.md  review-bundle.txt
models/: README.md
schemas/: constraints.schema.json  transform.schema.json
scripts/: bootstrap.sh  fetch-models.sh
tools/icon-gen/: Cargo.toml
tools/icon-gen/src/: main.rs
