[workspace]
resolver = "2"
members = ["crates/*", "apps/desktop"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79" # From current stable toolchain
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/ml-georeferencer" # Placeholder
homepage = "https://github.com/user/ml-georeferencer" # Placeholder
documentation = "https://docs.rs/ml-georeferencer" # Placeholder

[workspace.dependencies]
# Dev dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
approx = "0.5"
