[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
solver = { path = "../solver" }
features = { path = "../features" }
io = { path = "../io" }
wgpu = { version = "0.20", optional = true }
onnxruntime = { version = "0.0.14", optional = true }
opencv = { version = "0.90", optional = true }

[features]
gpu = ["dep:wgpu"]
onnx = ["dep:onnxruntime"]
opencv = ["dep:opencv"]
