[package]
name = "io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
# rusqlite removed to avoid sqlite linkage conflicts; add back when MBTiles support implemented
cog-core = "0.2"
pdfium-render = "0.8"
image = "0.24"
base64 = "0.21"
proj.workspace = true
serde = { version = "1.0", features = ["derive"] }
