[package]
name = "solver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
types = { path = "../types" }
nalgebra = "0.32"
rand = "0.8"

[dev-dependencies]
approx.workspace = true
