[package]
name = "desktop"
version = "0.1.0"
authors = ["You"]
edition = "2021"

[dependencies]
tauri = { version = "1.6.1", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
types = { path = "../../../crates/types" }
io = { path = "../../../crates/io" }
solver = { path = "../../../crates/solver" }
nalgebra = "0.32"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }
