[package]
name = "desktop"
version = "0.1.0"
authors = ["You"]
edition = "2021"

[dependencies]
tauri = { version = "2.7.0", features = ["custom-protocol"] }
tauri-plugin-fs = "2.4.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
types = { path = "../../../crates/types" }
io = { path = "../../../crates/io" }
solver = { path = "../../../crates/solver" }
nalgebra = "0.32"


[build-dependencies]
tauri-build = { version = "2.3.1", features = ["config-toml", "config-json5"] }
